Implement router service with routing and health endpoints

--- a/configs/rate_limits.yaml
+++ b/configs/rate_limits.yaml
@@ -1,1 +1,7 @@
-# Ограничения частоты запросов.
+default:
+  capacity: 60
+  refill_rate: 30
+per_api_key:
+  admin-key:
+    capacity: 120
+    refill_rate: 60
