--- a/deploy/k8s/helm/rerank/values.yaml
+++ b/deploy/k8s/helm/rerank/values.yaml
@@ -11,6 +11,7 @@ service:
 
 env:
   modelName: "cross-encoder/ms-marco-MiniLM-L-2-v2"
+  modelMapping: "{}"
   maxDocuments: 50
   maxDocumentLength: 4096
 
