--- a/services/rerank/Dockerfile
+++ b/services/rerank/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     RERANK_MODEL_NAME=cross-encoder/ms-marco-MiniLM-L-2-v2 \
+    RERANK_MODEL_MAPPING={} \
     RERANK_MAX_DOCUMENTS=50 \
     RERANK_MAX_DOCUMENT_LENGTH=4096
 
