--- a/configs/rate_limits.yaml
+++ b/configs/rate_limits.yaml
@@ -1,6 +1,9 @@
 default:
   capacity: 60
   refill_rate: 30
+anonymous:
+  capacity: 30
+  refill_rate: 15
 per_api_key:
   admin-key:
     capacity: 120
