feat(rerank): switch to BAAI/bge-reranker-v2-m3 multilingual model
- Replace cross-encoder/ms-marco-MiniLM-L-2-v2 with BAAI/bge-reranker-v2-m3
- Update docker-compose, Dockerfile, and main.py defaults
- Update routing.yaml served_name
- Update k8s manifests and helm values
- Update documentation (DEVELOPER.md, DEPLOYMENT.md, OPERATIONS.md, README.md, runbook.md)

Benefits:
- Multilingual support (100+ languages including Russian)
- Better compatibility with BAAI/bge-m3 embeddings
- Improved reranking quality

--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       context: ../..
       dockerfile: services/rerank/Dockerfile
     environment:
-      RERANK_MODEL_MAPPING: '{"rerank-base": "cross-encoder/ms-marco-MiniLM-L-2-v2"}'
+      RERANK_MODEL_MAPPING: '{"rerank-base": "BAAI/bge-reranker-v2-m3"}'
     ports:
       - "9002:9002"
     networks:
