--- a/configs/routing.yaml
+++ b/configs/routing.yaml
@@ -30,7 +30,7 @@ embeddings:
 
 rerank:
   - model: "rerank-base"
-    served_name: "cross-encoder/ms-marco-MiniLM-L-2-v2"
+    served_name: "BAAI/bge-reranker-v2-m3"
     enabled: true
     max_top_k: 50
     upstream:
